@@ -1,5 +1,14 @@
 2007-09-12  Cosimo Cecchi  <cosimoc@svn.gnome.org>
 
+	* src/ephy-history-window.c: (search_entry_clear_cb),
+	(build_search_box):
+
+	Adapt EphyHistoryWindow to the iconified EphySearchEntry and adds
+	a cleaner button in its search entry, like in Bookmarks Editor.
+	Fixes bug #476179.
+
+2007-09-12  Cosimo Cecchi  <cosimoc@svn.gnome.org>
+
 	* src/ephy-find-toolbar.c: (ephy_find_toolbar_open):
 
 	Find toolbar now remembers last pattern searched also when opened with
